并发典型汇总-线程安全

--- a/src/main/java/com/jimi/java/_interview/concurrent/_1_并发相关汇总-基础.md
+++ b/src/main/java/com/jimi/java/_interview/concurrent/_1_并发相关汇总-基础.md
@@ -249,7 +249,7 @@ protected void service(HttpServletRequest req, HttpServletResponse resp) throws 
 采用spring解决单例service并发问题的方式--ThreadLocal。参考[这里](http://blog.csdn.net/wxwzy738/article/details/15623733)
 
 #### 2、同步有几种实现方法？
-答：锁和volatile
+答：锁和volatile（现在volatile的作用更多用于禁止重排序）
 
 #### 3、volatile有什么用？能否用一句话说明下volatile的应用场景？
 答：作用：多线程都不从本地内存读取volatile变量的值，而是直接从主内存读取，保持volatile变量可见性。
