jdk常见设计模式的应用 happens-before规则 两个大数求和

--- a/src/main/java/com/jimi/java/_interview/concurrent/_1_并发相关汇总-基础.md
+++ b/src/main/java/com/jimi/java/_interview/concurrent/_1_并发相关汇总-基础.md
@@ -256,7 +256,22 @@ protected void service(HttpServletRequest req, HttpServletResponse resp) throws 
 应用场景：比较适合在1写N读的情况。
 
 #### 4、为什么代码会重排序？
-答：
+答：提高性能。
 
-#### 5、请说明下java的内存模型及其工作流程。
+#### 5、happens-before规则什么鬼？
+答：在多线程并发执行情况下，每个线程执行时，都有自己的副本。
+如果是多线程要同时访问同一个变量呢？
+内存中一个变量会存在于多个工作存储中，线程1修改了变量a的值什么时候对线程2可见？此外，编译器或运行时为了效率可以在允许的时候对指令进行重排序，重排序后的执行顺序就与代码不一致了，这样线程2读取某个变量的时候线程1可能还没有进行写入操作呢，虽然代码顺序上写操作是在前面的。这就是可见性问题的由来。
+但需要注意，happens-before规则不是描述实际操作的先后顺序，它是用来描述可见性的一种规则，下面我给上述两条规则换个说法：
+      
+- 如果线程1解锁了monitor a，接着线程2锁定了a，那么，线程1解锁a之前的写操作都对线程2可见（线程1和线程2可以是同一个线程）。
+- 如果线程1写入了volatile变量v（这里和后续的“变量”都指的是对象的字段、类字段和数组元素），接着线程2读取了v，那么，线程1写入v及之前的写操作都对线程2可见（线程1和线程2可以是同一个线程）。
+
+通常，通过加锁或volatile的方式解决。
+
+TIP：happens-before其实就是对重排序的限制，即哪些情况下是不能重排序的。
+
+参考 [这里](http://ifeve.com/easy-happens-before/)
+
+#### 6、请说明下java的内存模型及其工作流程。
 
