--- a/src/main/java/com/jimi/java/_interview/mysql/4、事务和隔离级别介绍.md
+++ b/src/main/java/com/jimi/java/_interview/mysql/4、事务和隔离级别介绍.md
@@ -44,11 +44,68 @@
  事务1更新某行记录时，事务2不能对这行记录做更新，直到事务1结束（因为事务一对数据增加了共享读锁，事务二不能增加排他写锁进行数据的修改）。
  
 3. 举例
-![]()
+![脏读](https://github.com/cangchen8180/my-java-project/blob/master/src/main/java/com/jimi/java/_interview/mysql/imgs/%E8%84%8F%E8%AF%BB.png)
+
+事务一共查询了两次，在两次查询的过程中，事务二对数据进行了修改，并未提交（commit）。但是事务一的第二次查询查到了事务二的修改结果。在数据库的读现象浅析中我们介绍过，这种现象我们称之为脏读。
+
+#### 提交读
+
+1. 加锁原理
+>事务对当前被读取的数据加 行级共享锁（当读到时才加锁），一旦读完该行，立即释放该行级共享锁；
+ 事务在更新某数据的瞬间（就是发生更新的瞬间），必须先对其加 行级排他锁，直到事务结束才释放。
+
+2. 现象
+>事务1在读取某行记录的整个过程中，事务2都可以对该行记录进行读取（因为事务一对该行记录增加行级共享锁的情况下，事务二同样可以对该数据增加共享锁来读数据。）。
+ 事务1读取某行的一瞬间，事务2不能修改该行数据，但是，只要事务1读取完改行数据，事务2就可以对该行数据进行修改。（事务一在读取的一瞬间会对数据增加共享锁，任何其他事务都不能对该行数据增加排他锁。但是事务一只要读完该行数据，就会释放行级共享锁，一旦锁释放，事务二就可以对数据增加排他锁并修改数据）。
+ 事务1更新某行记录时，事务2不能对这行记录做更新，直到事务1结束。（事务一在更新数据的时候，会对该行数据增加排他锁，知道事务结束才会释放锁，所以，在事务二没有提交之前，事务一都能不对数据增加共享锁进行数据的读取。所以，提交读可以解决脏读的现象）
+
+3. 举例
+ ![不可重复读](https://github.com/cangchen8180/my-java-project/blob/master/src/main/java/com/jimi/java/_interview/mysql/imgs/%E4%B8%8D%E5%8F%AF%E9%87%8D%E5%A4%8D%E8%AF%BB.png)
+
+在提交读隔离级别中，在事务二提交之前，事务一不能读取数据。只有在事务二提交之后，事务一才能读数据。
+但是从上面的例子中我们也看到，事务一两次读取的结果并不一致，所以提交读不能解决不可重复读的读现象。
+
+简而言之，提交读这种隔离级别保证了读到的任何数据都是提交的数据，避免了脏读(dirty reads)。但是不保证事务重新读的时候能读到相同的数据，因为在每次数据读完之后其他事务可以修改刚才读到的数据。
+
+#### 可重复读
+
+1. 加锁原理
+>事务在读取某数据的瞬间（就是开始读取的瞬间），必须先对其加 行级共享锁，直到事务结束才释放；
+ 事务在更新某数据的瞬间（就是发生更新的瞬间），必须先对其加 行级排他锁，直到事务结束才释放。
+
+2. 现象
+>事务1在读取某行记录的整个过程中，事务2都可以对该行记录进行读取（因为事务一对该行记录增加行级共享锁的情况下，事务二同样可以对该数据增加共享锁来读数据。）。
+ 事务1在读取某行记录的整个过程中，事务2都不能修改该行数据（事务一在读取的整个过程会对数据增加共享锁，直到事务提交才会释放锁，所以整个过程中，任何其他事务都不能对该行数据增加排他锁。所以，可重复读能够解决不可重复读的读现象）
+ 事务1更新某行记录时，事务2不能对这行记录做更新，直到事务1结束。（事务一在更新数据的时候，会对该行数据增加排他锁，知道事务结束才会释放锁，所以，在事务二没有提交之前，事务一都能不对数据增加共享锁进行数据的读取。所以，提交读可以解决脏读的现象）
+
+3. 举例
+![幻读](https://github.com/cangchen8180/my-java-project/blob/master/src/main/java/com/jimi/java/_interview/mysql/imgs/%E5%B9%BB%E8%AF%BB.png)
+
+1.事务一的第一次查询条件是age BETWEEN 10 AND 30;如果这是有十条记录符合条件。这时，他会给符合条件的这十条记录增加行级共享锁。任何其他事务无法更改这十条记录。
+2.事务二执行一条sql语句，语句的内容是向表中插入一条数据。因为此时没有任何事务对表增加表级锁，所以，该操作可以顺利执行。
+3.事务一再次执行SELECT * FROM users WHERE age BETWEEN 10 AND 30;时，结果返回的记录变成了十一条，比刚刚增加了一条，增加的这条正是事务二刚刚插入的那条。
+所以，事务一的两次范围查询结果并不相同。这也就是我们提到的幻读。
+
+#### 可序列化
+
+1. 加锁原理
+>事务在读取数据时，必须先对其加 表级共享锁 ，直到事务结束才释放；
+ 事务在更新数据时，必须先对其加 表级排他锁 ，直到事务结束才释放。
+
+2. 现象
+>事务1正在读取A表中的记录时，则事务2也能读取A表，但不能对A表做更新、新增、删除，直到事务1结束。(因为事务一对表增加了表级共享锁，其他事务只能增加共享锁读取数据，不能进行其他任何操作）
+ 事务1正在更新A表中的记录时，则事务2不能读取A表的任意记录，更不可能对A表做更新、新增、删除，直到事务1结束。（事务一对表增加了表级排他锁，其他事务不能对表增加共享锁或排他锁，也就无法进行任何操作）
+
+虽然可序列化解决了脏读、不可重复读、幻读等读现象。但是序列化事务会产生以下效果：
+
+- 无法读取其它事务已修改但未提交的记录。
+- 在当前事务完成之前，其它事务不能修改目前事务已读取的记录。
+- 在当前事务完成之前，其它事务所插入的新记录，其索引键值不能在当前事务的任何语句所读取的索引键范围中。
 
 
 ### MySQL中操作隔离级别方式
-InnoDB默认隔离级别是可重复读（REPEATABLE READ），InnoDB的可重复读隔离级别和其他数据库的可重复读是有区别的，不会造成幻读（phantom read）。
+InnoDB默认隔离级别是可重复读（REPEATABLE READ），InnoDB的可重复读隔离级别和其他数据库的可重复读是有区别的，使用GAP锁做到不会造成幻读（phantom read）。
+参考[美团-Innodb中的事务隔离级别和锁的关系](http://tech.meituan.com/innodb-lock.html)
 
 查询和修改方式，如下，
   
