--- a/src/main/java/com/jimi/java/_interview/distributed/2、解决缓存被击穿的问题.md
+++ b/src/main/java/com/jimi/java/_interview/distributed/2、解决缓存被击穿的问题.md
@@ -25,6 +25,9 @@ public String get(key) {
 ```
 注：
 >SETNX key value
-  将 key 的值设为 value ，当且仅当 key 不存在时，设置成功，返回 1 。
-  若给定的 key 已经存在，则 SETNX 不做任何动作，设置失败，返回 0 。
-  SETNX 是『SET if Not eXists』(如果不存在，则 SET)的简写。
+
+>将 key 的值设为 value ，当且仅当 key 不存在时，设置成功，返回 1 。
+
+>若给定的 key 已经存在，则 SETNX 不做任何动作，设置失败，返回 0 。
+
+>SETNX 是『SET if Not eXists』(如果不存在，则 SET)的简写。
