--- a/src/main/java/com/jimi/java/_interview/distributed/2、解决缓存被击穿的问题.md
+++ b/src/main/java/com/jimi/java/_interview/distributed/2、解决缓存被击穿的问题.md
@@ -8,12 +8,13 @@
 
 ```java
 public String get(key) {
-      String value = redis.get(key);      if (value == null) { //代表缓存值过期
-      //设置3min的超时，防止del操作失败的时候，下次缓存过期一直不能load db
-      if (redis.setnx(key_mutex, 1, 3 * 60) == 1) {  //代表设置成功
-           value = db.get(key);
-                  redis.set(key, value, expire_secs);
-                  redis.del(key_mutex);
+      String value = redis.get(key);
+      if (value == null) { //代表缓存值过期
+        //设置3min的超时，防止del操作失败的时候，下次缓存过期一直不能load db
+         if (redis.setnx(key_mutex, 1, 3 * 60) == 1) {  //代表设置成功
+                value = db.get(key);
+                redis.set(key, value, expire_secs);
+                redis.del(key_mutex);
           } else {  //这个时候代表同时候的其他线程已经load db并回设到缓存了，这时候重试获取缓存值即可
                   sleep(50);
                   get(key);  //重试
