--- a/src/main/java/com/jimi/java/_interview/mysql/4、事务和隔离级别介绍.md
+++ b/src/main/java/com/jimi/java/_interview/mysql/4、事务和隔离级别介绍.md
@@ -57,7 +57,8 @@
  事务1更新某行记录时，事务2不能对这行记录做更新，直到事务1结束（因为事务一对数据增加了共享读锁，事务二不能增加排他写锁进行数据的修改）。
  
 3. 举例
-![脏读](https://github.com/cangchen8180/my-java-project/blob/master/src/main/java/com/jimi/java/_interview/mysql/imgs/%E8%84%8F%E8%AF%BB.png)
+
+![脏读](imgs/脏读.png)
 
 事务一共查询了两次，在两次查询的过程中，事务二对数据进行了修改，并未提交（commit）。但是事务一的第二次查询查到了事务二的修改结果。在数据库的读现象浅析中我们介绍过，这种现象我们称之为脏读。
 
@@ -77,7 +78,8 @@
  事务1更新某行记录时，事务2不能对这行记录做更新，直到事务1结束。（事务一在更新数据的时候，会对该行数据增加排他锁，知道事务结束才会释放锁，所以，在事务二没有提交之前，事务一都能不对数据增加共享锁进行数据的读取。所以，提交读可以解决脏读的现象）
 
 3. 举例
- ![不可重复读](https://github.com/cangchen8180/my-java-project/blob/master/src/main/java/com/jimi/java/_interview/mysql/imgs/%E4%B8%8D%E5%8F%AF%E9%87%8D%E5%A4%8D%E8%AF%BB.png)
+
+ ![不可重复读](imgs/不可重复读.png)
 
 在提交读隔离级别中，在事务二提交之前，事务一不能读取数据。只有在事务二提交之后，事务一才能读数据。
 但是从上面的例子中我们也看到，事务一两次读取的结果并不一致，所以提交读不能解决不可重复读的读现象。
@@ -100,7 +102,8 @@
  事务1更新某行记录时，事务2不能对这行记录做更新，直到事务1结束。（事务一在更新数据的时候，会对该行数据增加排他锁，知道事务结束才会释放锁，所以，在事务二没有提交之前，事务一都能不对数据增加共享锁进行数据的读取。所以，提交读可以解决脏读的现象）
 
 3. 举例
-![幻读](https://github.com/cangchen8180/my-java-project/blob/master/src/main/java/com/jimi/java/_interview/mysql/imgs/%E5%B9%BB%E8%AF%BB.png)
+
+![幻读](imgs/幻读.png)
 
 1. 事务一的第一次查询条件是age BETWEEN 10 AND 30;如果这是有十条记录符合条件。这时，他会给符合条件的这十条记录增加行级共享锁。任何其他事务无法更改这十条记录。
 2. 事务二执行一条sql语句，语句的内容是向表中插入一条数据。因为此时没有任何事务对表增加表级锁，所以，该操作可以顺利执行。
